--- a/VibeSpot/app/build.gradle
+++ b/VibeSpot/app/build.gradle
@@ -19,16 +19,24 @@ android {
     }
 }
 
-
+repositories {
+    //mavenCentral()
+    flatDir {
+        dirs 'libs'
+    }
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.github.spotify:android-auth:9425c6a140'
 
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
+    // This library handles authentication and authorization
+    compile 'com.spotify.android:auth:1.0.0-alpha'
+
+   // compile 'com.github.spotify:android-auth:9425c6a140'
+
+    // This library handles music playback
+    //compile 'com.spotify.sdk:spotify-player:1.0.0-alpha'
+
+    // All other dependencies for your app should also be here:
+   // compile 'com.android.support:appcompat-v7:23.1.1'
 }
