--- a/VibeSpot/build.gradle
+++ b/VibeSpot/build.gradle
@@ -14,8 +14,7 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
-        maven { url 'https://jitpack.io' }
+        ? maven { url 'https://jitpack.io' }
 
     }
 }
